--- a/frontend_app/src/styles.scss
+++ b/frontend_app/src/styles.scss
@@ -22,15 +22,15 @@ $green: #3f7d20 !default;
 $teal: #20c997 !default;
 $cyan: #17a2b8 !default;
 
-$primary: #2f3858;
-$secondary: #d81e5e;
+$primary: #8a0303;
+$secondary: #5ac75a;
 $success: $green !default;
 $info: $cyan !default;
 $warning: $yellow !default;
 $danger: $red !default;
 $light: $gray-100 !default;
 // $dark: $gray-800 !default;
-$dark: #2F4858 !default;
+$dark: #2f4858 !default;
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
