[ISSUE 25] add search option

--- a/frontend_app/src/styles.scss
+++ b/frontend_app/src/styles.scss
@@ -48,6 +48,10 @@ $dark: #2f4858 !default;
     color: $dark;
   }
 
+  .card {
+    border: none;
+  }
+
   button.cta {
     font-weight: 700;
     background-color: $primary;
